skills and publications update

--- a/index.html
+++ b/index.html
@@ -240,57 +240,30 @@
 
               <div class="section-title">
                   <h2>Skills</h2>
-                  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
               </div>
 
               <div class="row skills-content">
 
-                  <div class="col-lg-6" data-aos="fade-up">
+                  <div class="col-lg-11" data-aos="fade-up">
 
-                      <div class="progress">
-                          <span class="skill">HTML <i class="val">100%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                      <div class="skill">
+                          <span class="skill"><b>Programming Language:</b> C#, C++, JavaScript, Python</span>
                       </div>
 
-                      <div class="progress">
-                          <span class="skill">CSS <i class="val">90%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                      <div class="skill">
+                        <span class="skill"><b>Tools/Frameworks:</b> Unity3D, CHAI3D (Computer Haptics and Active Interfaces), OpenGL, Visual Studio, Git</span>
                       </div>
 
-                      <div class="progress">
-                          <span class="skill">JavaScript <i class="val">75%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                      <div class="skill">
+                        <span class="skill"><b>Technologies:</b> Augmented &amp Virtual Reality, Haptics </span>
                       </div>
 
-                  </div>
-
-                  <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-                      <div class="progress">
-                          <span class="skill">PHP <i class="val">80%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                      <div class="skill">
+                        <span class="skill"><b>Hardware:</b> Arduino, ESP32 </span>
                       </div>
 
-                      <div class="progress">
-                          <span class="skill">WordPress/CMS <i class="val">90%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                      </div>
-
-                      <div class="progress">
-                          <span class="skill">Photoshop <i class="val">55%</i></span>
-                          <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                      <div class="skill">
+                        <span class="skill"><b>Industrial:</b> Game Development, Simulation, Computer Vision </span>
                       </div>
 
                   </div>
@@ -931,6 +904,49 @@
 
           </div>
       </section><!-- End Portfolio Section -->
+
+      <!-- ======= Publication Section ======= -->
+      <section id="skills" class="skills section-bg">
+        <div class="container">
+
+            <div class="section-title">
+                <h2>Publications</h2>
+            </div>
+
+            <div class="row skills-content">
+
+                <div class="col-lg-11" data-aos="fade-up">
+
+                    <div class="skill">
+                        <span class="skill"> <b>Pockets: User-Assigned Menus Based on Physical Buttons for Virtual Environments</b>
+                           <br> Simonson, A., <b>Kunjam, P</b>., and Maes, P. <br>
+                            In <i>SIGGRAPH '21 Posters: Special Interest Group on Computer Graphics and Interactive Techniques, ACM (2021).</i>
+                            <br>
+                            <a href="https://drive.google.com/file/d/1qkeDf6xZW0-KfqXcNWRMkPZlez0nAqah/view?usp=drive_link" target="_blank">[PDF]</a>
+                            <a href="https://dl.acm.org/doi/10.1145/3450618.3469174" target="_blank">[DOI]</a>
+                        </span>
+                    </div>
+                    
+                    <br>
+
+                    <div class="skill">
+                        <span class="skill"> <b>Virtual reality for synergistic surgical training and data generation</b>
+                            <br> Munawar, A., Li, Z., <b>Kunjam, P.</b>, Nagururu, N., Ding, A.S., Kazanzides, P., Looi, T., Creighton, 
+                            F.X., Taylor, R.H. and Unberath, M. <br>
+                            In <i>Computer Methods in Biomechanics and Biomedical Engineering: Imaging & Visualization (2021).</i>
+                            <br>
+                            <a href="https://drive.google.com/file/d/1jUq5Wpt0CUFhtmW_N3lB-WPMoVVERZTq/view?usp=drive_link" target="_blank">[PDF]</a>
+                            <a href="https://www.tandfonline.com/doi/full/10.1080/21681163.2021.1999331" target="_blank">[DOI]</a>
+                        </span>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Publication Section -->
+
       <!-- ======= Services Section ======= -->
       <section id="services" class="services">
           <div class="container">
