Working on projects section

--- a/index.html
+++ b/index.html
@@ -793,115 +793,132 @@
           <div class="container">
 
               <div class="section-title">
-                  <h2>Portfolio</h2>
-                  <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                  <h2>Projects</h2>
               </div>
 
               <div class="row" data-aos="fade-up">
                   <div class="col-lg-12 d-flex justify-content-center">
                       <ul id="portfolio-flters">
                           <li data-filter="*" class="filter-active">All</li>
-                          <li data-filter=".filter-app">App</li>
-                          <li data-filter=".filter-card">Card</li>
-                          <li data-filter=".filter-web">Web</li>
+                          <li data-filter=".filter-app">Research Projects</li>
+                          <li data-filter=".filter-card">Personal Projects</li>
+                          <li data-filter=".filter-web">Hackathon</li>
                       </ul>
                   </div>
               </div>
 
               <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="img/ambf/thumbnail.png" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="ambf.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">AMBF+ (Asynchronouos Multibody Framework Plus)</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="img/pockets/pockets_thumb.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="pockets.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Pockets</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="img/Collision avoidance/ca_thumb.JPG" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="collision.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Collision Avoidance System in VR</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="img/Endomimyk/endomimyk.png" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="endomimyk.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">EndoMimyk</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="img/toh.png" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="toh.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Tower of Hanoi</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="img/pi_thumb.JPG" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="proxy.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Proxy Interpreter</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="img/jarvis/j1.png" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="jarvis.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">AI Assistant Jarvis</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="img/ar_thumb.JPG" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="cv_unity.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Computer Vision + Unity</h6>
+                </div>
 
-                  <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                      <div class="portfolio-wrap">
-                          <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                          <div class="portfolio-links">
-                              <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="img/game_thumb.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="gamedev_unity.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Game Development with Unity</h6>
+                </div>
 
+                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                    <div class="portfolio-wrap">
+                        <img src="img/game oasis.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a href="hackathon.html" title="More Details"><i class="bx bx-link"></i></a>
+                        </div>
+                    </div>
+                    <br>
+                    <h6 style="text-align: center;">Game Oasis Hackathon</h6>
+                </div>
               </div>
-
           </div>
       </section><!-- End Portfolio Section -->
 
