Projects section finished

--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                               <br>
 
                               I worked as an Intern at Mimyk Medical Simulation, IISc Bangalore under the supervision of Dr. Nithin Shivashankar and
-                              Dr. Shanthanu Chakravarthy. I contributed to the team's efforts in developing a novel endoscopy simulator (EndoMimyk).
+                              Dr. Shanthanu Chakravarthy. I contributed to the team's efforts in developing a novel endoscopy simulator (EndoMIMYK).
 
                           </p>
 
@@ -646,7 +646,7 @@
                           <br>
 
                           <ul>
-                              <li>Created 3D interactive training modules using unity3D for Endomimyk.</li>
+                              <li>Created 3D interactive training modules using unity3D for EndoMIMYK.</li>
                               <li>Identified major problems in medical disciplines. </li>
                               <li>
                                   Researched various applications of VR in surgical procedures.
@@ -850,7 +850,7 @@
                         </div>
                     </div>
                     <br>
-                    <h6 style="text-align: center;">EndoMimyk</h6>
+                    <h6 style="text-align: center;">EndoMIMYK</h6>
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card">
