--- a/ambf.html
+++ b/ambf.html
@@ -16,6 +16,10 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,31 +44,34 @@
 
   <!-- ======= Mobile nav toggle button ======= -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
+  
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
+  
       <div class="profile">
         <img src="img/profile_pic.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <!--TODO: ADD LINK FOR CV-->
+          <a href="#" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
+              title="Linkedin"></i></a>
+          <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
+          <a href="https://scholar.google.com/citations?hl=en&user=vuB_Ua0AAAAJ" class="" target="_blank"><i
+              class="bi bi-mortarboard-fill" title="Google Scholar"></i></i></a>
         </div>
       </div>
-
+  
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a></li>
+          <li><a href="index.html#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i> <span>Experience</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i> <span>Projects</span></a></li>
+          <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li>
+          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -155,7 +162,10 @@
               </div>
               <div class="swiper-pagination"></div>
 
-              <iframe width="620" height="360" src="https://www.youtube.com/embed/36pYIt1KGs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/36pYIt1KGs4?si=3jNBDytTg9TupMOp"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
             </div>
           </div>
 
@@ -174,7 +184,6 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>All images 2021 Taylor & Francis</span></strong>
       </div>
     </div>
   </footer><!-- End  Footer -->
