--- a/ambf.html
+++ b/ambf.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Punit Kunjam</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,7 +54,7 @@
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
           <!--TODO: ADD LINK FOR CV-->
-          <a href="#" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://drive.google.com/file/d/1a_KYkK5s2-H2cZBWEYkz2snHoa1L_CrC/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
               title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
@@ -124,9 +124,12 @@
                 immersive surgical simulation.
 
                 <ul style="text-align: justify;">
-                  <li>I designed and set up the initial prototype of the virtual drilling simulator enabling users to drill the volumetric data (anatomy).</li>
-                  <li>I ideated and developed the drill-shaft collision algorithm to provide users with haptic feedback on the virtual surgical drill shaft’s interaction with the anatomy.</li>
-                  <li>I implemented features for safety that indicate warning messages while drilling nearby critical regions of the anatomy, allow users to save and load the simulation states in real-time, and record and replay the drill movement in the simulator.</li>
+                  <li>I conceived and established the initial prototype for a virtual drilling simulator, allowing users to interactively
+                  practice drilling volumetric data, specifically in anatomy</li>
+                  <li>I conceptualized and implemented the algorithm for drill-shaft collisions, delivering haptic feedback to users regarding
+                  the virtual surgical drill shaft's interaction with anatomical structures</li>
+                  <li>I implemented safety features to display warning messages when drilling near critical anatomy regions, enabled real-time
+                  saving and loading of simulation states, and facilitated recording and replaying of drill movements within the simulator.</li>
                 </ul>
               </p>
 
