--- a/cv_unity.html
+++ b/cv_unity.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Punit Kunjam</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -55,8 +55,7 @@
         <img src="img/profile_pic.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
-          <!--TODO: ADD LINK FOR CV-->
-          <a href="#" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://drive.google.com/file/d/1a_KYkK5s2-H2cZBWEYkz2snHoa1L_CrC/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
               title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
