--- a/pockets.html
+++ b/pockets.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+<title>Punit Kunjam</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,7 +54,7 @@
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
           <!--TODO: ADD LINK FOR CV-->
-          <a href="#" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://drive.google.com/file/d/1a_KYkK5s2-H2cZBWEYkz2snHoa1L_CrC/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
               title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
@@ -122,9 +122,11 @@
                   to the body or 3D space.
 
                   <ul>
-                    <li>I collected and assessed the assets required for designing and developing the paint application to define the idea of Pockets.</li>
-                    <li>I initiated the design of the prototype for Pockets in Unity.</li>
-                    <li>I implemented the logic and wrote scripts for color picker (a tool for generating blobs of paint) and paintbrush operations.</li>
+                    <li>I gathered and evaluated necessary assets for conceptualizing and creating the paint application, elucidating the
+                    concept of Pockets.</li>
+                    <li>I created a low to medium-fidelity prototype for Pockets using Unity.</li>
+                    <li>I developed the logic and scripted functionalities for a color picker tool, enabling the generation of paint blobs and
+                    facilitating paintbrush operations.</li>
                     <li>I tested the practicality of Pockets in VR with Oculus Rift.</li>
                   </ul>
                 </p>
