--- a/toh.html
+++ b/toh.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Punit Kunjam</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,7 +54,7 @@
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
           <!--TODO: ADD LINK FOR CV-->
-          <a href="#" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://drive.google.com/file/d/1a_KYkK5s2-H2cZBWEYkz2snHoa1L_CrC/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin"
               title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
@@ -119,6 +119,14 @@
                 to collect a specific item in the scene meanwhile the non-VR user (animated model) deliberately gets in the way of the
                 VR user. The scene compensates itself by rotating the world so that the VR user will reposition itself accordingly in
                 the 3D space, driving both VR and non-VR users away from each other.
+
+                <ul>
+                  <li>I formulated the idea to build an immersive learning experience for solving the TOH puzzle.</li>
+                  <li>I designed, developed, and tested a 3D open-world game from scratch in Unity.</li>
+                  <li>I programmed in C# for handling user input and manipulating objects in the scene.</li>
+                </ul>
+
+
                 </p>
 
                 <a href="https://github.com/pkunjam/Tower-of-Hanoi" target="_blank">[GitHub]</a>
