--- a/ambf.html
+++ b/ambf.html
@@ -70,7 +70,7 @@
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a></li>
           <li><a href="index.html#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i> <span>Experience</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i> <span>Projects</span></a></li>
-          <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li>
+          <!-- <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li> -->
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
