--- a/gamedev_unity.html
+++ b/gamedev_unity.html
@@ -76,8 +76,8 @@
               <span>Experience</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i>
               <span>Projects</span></a></li>
-          <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a>
-          </li>
+          <!-- <li><a href="index.html#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a>
+          </li> -->
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i>
               <span>Contact</span></a></li>
         </ul>
