--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <li><a href="#resume" class="nav-link scrollto"><i class="bi bi-book"></i><span>Education</span></a></li>
               <li><a href="#experience" class="nav-link scrollto"><i class="bi bi-briefcase"></i> <span>Experience</span></a></li>
               <li><a href="#portfolio" class="nav-link scrollto"><i class="bi bi-folder"></i> <span>Projects</span></a></li>
-              <li><a href="#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li>
+              <!-- <li><a href="#services" class="nav-link scrollto"><i class="bi bi-luggage"></i> <span>Media</span></a></li> -->
               <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
           </ul>
       </nav><!-- .nav-menu -->
@@ -1041,8 +1041,7 @@
         </div>
     </section><!-- End Publication Section -->
 
-      <!-- ======= Services Section ======= -->
-      <section id="services" class="services">
+      <!-- <section id="services" class="services">
           <div class="container">
 
               <div class="section-title">
@@ -1084,8 +1083,7 @@
               </div>
 
           </div>
-      </section><!-- End Services Section -->
-      <!-- ======= Testimonials Section ======= -->
+      </section>
       <section id="testimonials" class="testimonials section-bg">
           <div class="container">
 
@@ -1108,7 +1106,7 @@
                               <h3>Saul Goodman</h3>
                               <h4>Ceo &amp; Founder</h4>
                           </div>
-                      </div><!-- End testimonial item -->
+                      </div>
 
                       <div class="swiper-slide">
                           <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -1121,7 +1119,7 @@
                               <h3>Sara Wilsson</h3>
                               <h4>Designer</h4>
                           </div>
-                      </div><!-- End testimonial item -->
+                      </div>
 
                       <div class="swiper-slide">
                           <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -1134,7 +1132,7 @@
                               <h3>Jena Karlis</h3>
                               <h4>Store Owner</h4>
                           </div>
-                      </div><!-- End testimonial item -->
+                      </div>
 
                       <div class="swiper-slide">
                           <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -1147,7 +1145,7 @@
                               <h3>Matt Brandon</h3>
                               <h4>Freelancer</h4>
                           </div>
-                      </div><!-- End testimonial item -->
+                      </div>
 
                       <div class="swiper-slide">
                           <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -1160,14 +1158,15 @@
                               <h3>John Larson</h3>
                               <h4>Entrepreneur</h4>
                           </div>
-                      </div><!-- End testimonial item -->
+                      </div>
 
                   </div>
                   <div class="swiper-pagination"></div>
               </div>
 
           </div>
-      </section><!-- End Testimonials Section -->
+      </section> -->
+
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
           <div class="container">
