--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                       <div class="count-box">
                           <a href="https://mimyk.com/" target="_blank">
                               <img class="img-fluid" width="125px" src="img/icons/iisc.png" alt=""> &nbsp;
-                              <img class="img-fluid" width="125px" src="img/icons/mimyk.jpg" alt="">
+                              <img class="img-fluid" width="125px" src="./img/icons/mimyk.jpg" alt="">
                           </a>
                       </div>
                   </div>
