--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                       <div class="count-box">
                           <a href="https://mimyk.com/" target="_blank">
                               <img class="img-fluid" width="125px" src="img/icons/iisc.png" alt=""> &nbsp;
-                              <img class="img-fluid" width="125px" src="./img/icons/mimyk.jpg" alt="">
+                              <img class="img-fluid" width="125px" src="img/mimyk_1.svg" alt="">
                           </a>
                       </div>
                   </div>
@@ -687,7 +687,7 @@
                       <div class="resume-item">
 
                           <img class="img-fluid" width="125px" src="img/icons/iisc.png"> &nbsp; &nbsp;
-                          <img class="img-fluid" width="150px" src="img/icons/mimyk.jpg">
+                          <img class="img-fluid" width="150px" src="img/mimyk_1.svg">
 
                           <br>
                           <br>
