toh description update

--- a/toh.html
+++ b/toh.html
@@ -110,15 +110,11 @@
               <div class="portfolio-description">
     
                 <p style="text-align: justify;">
-                I worked on a system comparing different hazard indication and avoidance methods for users immersed in a virtual
-                environment. Specifically, I developed a novel system for collision avoidance with people who may or may not be engaged
-                in VR. I implemented this system using a machine learning-based human pose estimation framework, which tracks users in
-                the simulated environment and offers visual and auditory feedback following different hazard indication and avoidance
-                techniques. I used the redirected walking technique, which manipulates the scene around the users, causing them to
-                reorient themselves in the virtual world, thus avoiding the collision. Video shows an experiment where a VR user tends
-                to collect a specific item in the scene meanwhile the non-VR user (animated model) deliberately gets in the way of the
-                VR user. The scene compensates itself by rotating the world so that the VR user will reposition itself accordingly in
-                the 3D space, driving both VR and non-VR users away from each other.
+                The Tower of Hanoi (TOH) is a famous mathematical game. It consists of three rods and some disks of different sizes,
+                sliding onto any rod. Initially, solving this puzzle is complicated for visual learners. I developed a simulation of
+                this game to visualize TOH’s problem statement and the solution. This simulation features a proper room-like environment
+                to give the players an immersive experience, a perspective camera controlled by the player’s movement and look, and
+                visual indications for invalid operations.
 
                 <ul>
                   <li>I formulated the idea to build an immersive learning experience for solving the TOH puzzle.</li>
