--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                               <br>
                               <br>
 
-                              I worked Worked as a full-time research engineer to contribute building an AI companion.
+                              I worked as a full-time research engineer to contribute building an AI companion.
 
                           </p>
 
@@ -759,10 +759,10 @@
                           <br>
 
                           <ul>
-                              <li>Graded assignments and provided constructive feedback to students.</li>
-                              <li>Assisted in proctoring exams and maintaining academic integrity in the classroom. </li>
+                              <li>Grade assignments and provide constructive feedback to students.</li>
+                              <li>Assist in proctoring exams and maintaining academic integrity in the classroom. </li>
                               <li>
-                                  Demonstrated strong communication and interpersonal skills to effectively interact with students and fellow teaching
+                                  Demonstrat strong communication and interpersonal skills to effectively interact with students and fellow teaching
                                   assistants.
                               </li>
                           </ul>
