--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <img src="img/profile_pic.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Punit Kunjam</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://drive.google.com/file/d/1hBOnRsqsM-AT_GsJz85OnfT7yskAQoH3/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
+          <a href="https://drive.google.com/file/d/112jgvthVE18Aeclw8VEWCcEfeSovb4hw/view?usp=sharing" class="" target="_blank"><i class="bi bi-file-earmark-pdf" title="CV"></i></a>
           <a href="https://www.linkedin.com/in/pkunjam/" class="" target="_blank"><i class="bi bi-linkedin" title="Linkedin"></i></a>
           <a href="https://github.com/pkunjam" class="" target="_blank"><i class="bi bi-github" title="GitHub"></i></a>
           <a href="https://scholar.google.com/citations?hl=en&user=vuB_Ua0AAAAJ" class="" target="_blank"><i class="bi bi-mortarboard-fill" title="Google Scholar"></i></i></a>
@@ -813,7 +813,7 @@
                           <br>
                           <br>
 
-                          <h4>Intern</h4>
+                          <h4>3D Design Intern</h4>
                           <h5>June 2019 - July 2019</h5>
                           <p><em>WowExp Technologies Pvt. Ltd., Bangalore, Karnataka</em></p>
                           <p style="text-align:justify">
